--- a/module/src/components/tooltip/tooltip.prototyping.scss
+++ b/module/src/components/tooltip/tooltip.prototyping.scss
@@ -110,7 +110,6 @@
 }
 
 .arm-tooltip-content {
-  background-color: $white;
   padding: $spacing-xsmall;
   border-radius: $border-radius-small;
 }
